[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/themes/UI.tres" type="Theme" id=1]
[ext_resource path="res://src/menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/main-menu.png" type="Texture" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2400.0
margin_bottom = 1500.0
rect_scale = Vector2( 0.167, 0.167 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -35.0
margin_right = -124.0
margin_bottom = 89.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="campaign" type="Button" parent="options"]
margin_right = 81.0
margin_bottom = 19.0
rect_min_size = Vector2( 81, 0 )
text = "CAMPAIGN"

[node name="sandbox" type="Button" parent="options"]
margin_top = 35.0
margin_right = 81.0
margin_bottom = 54.0
text = "SANDBOX"

[node name="settings" type="Button" parent="options"]
margin_top = 70.0
margin_right = 81.0
margin_bottom = 89.0
text = "MANUAL"

[node name="quit" type="Button" parent="options"]
margin_top = 105.0
margin_right = 81.0
margin_bottom = 124.0
text = "QUIT"

[node name="version" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_bottom = 13.0
text = "v0.3.0 DEMO "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="copyright" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -165.0
margin_top = -13.0
text = "Copyright Â© 2021 Jack Anderson "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="campaign_menu" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levels" type="VBoxContainer" parent="campaign_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.5
margin_top = -62.0
margin_right = 24.5
margin_bottom = 62.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="campaign_menu/levels"]
margin_right = 49.0
margin_bottom = 13.0
text = "CAMPAIGN"
align = 1

[node name="level1" type="Button" parent="campaign_menu/levels"]
margin_top = 21.0
margin_right = 49.0
margin_bottom = 40.0
text = "Level 1"

[node name="level2" type="Button" parent="campaign_menu/levels"]
margin_top = 48.0
margin_right = 49.0
margin_bottom = 67.0
text = "Level 2"

[node name="level3" type="Button" parent="campaign_menu/levels"]
margin_top = 75.0
margin_right = 49.0
margin_bottom = 94.0
text = "Level 3"

[node name="level4" type="Button" parent="campaign_menu/levels"]
margin_top = 102.0
margin_right = 49.0
margin_bottom = 121.0
text = "Level 4"

[node name="close" type="Button" parent="campaign_menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -17.5
margin_top = -40.0
margin_right = 18.5
margin_bottom = -21.0
text = "Close"

[node name="settings_menu" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.862745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Label" parent="settings_menu"]
margin_left = 260.0
margin_top = 40.0
margin_right = 460.0
margin_bottom = 261.0
text = "CREDITS

Fortress Terra
by Jack Anderson

Soundtrack
Terra Tactics - Vav

Additional Assets from
opengameart.org
kenney.nl
freesound.org"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="RichTextLabel" parent="settings_menu"]
margin_left = 40.0
margin_top = 40.0
margin_right = 240.0
margin_bottom = 229.0
text = "CONTROLS

Use the mouse.

Click the relevant buttons to enter the specific build mode. Left click on the map to build. Right click to clear the current selection.

Press Escape to enter the Pause menu."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="Button" parent="settings_menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -17.5
margin_top = -40.0
margin_right = 17.5
margin_bottom = -21.0
text = "Close"

[node name="clear" type="Button" parent="settings_menu"]
visible = false
margin_left = 25.0
margin_top = 220.0
margin_right = 125.0
margin_bottom = 239.0
text = "CLEAR SAVE DATA"
